# blerg

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt
editor/: CMakeLists.txt
editor/main/: main.cpp
engine/: CMakeLists.txt
engine/core/: common.h  console.cpp  console.h  cstr_utils.h  defines.h  functional.h  input.cpp  input.h  input_key_codes.h  limits.h  memory_utils.h  type_traits.h
engine/core/containers/: array.h  iterator.h  pair.h
engine/core/fmt/: formatter.h
engine/core/memory/: allocator.h  hash_map.h  utils.h
engine/core/strings/: cstr_utils.h  formatter.h  string.h  string_view.h
engine/core/types/: allocator.h  array.h  iterator.h  string.h  string_view.h
engine/gfx_rhi/: window_handle.h
engine/gfx_rhi/base/: window_handle.cpp
engine/gfx_rhi/opengl/: window_handle.cpp
engine/math/: math.h  random.h  round.h
tests/: CMakeLists.txt  test_main.cpp
tests/core_types/: test_allocator.cpp  test_array.cpp  test_string.cpp  test_string_view.cpp
vender/: README.md
